fix(css): change heading font size and spacing
Change font size and spacing for headings by directly editing existing settings

--- a/ietf/static_src/css/bs-override.scss
+++ b/ietf/static_src/css/bs-override.scss
@@ -35,7 +35,7 @@ p {
 }
 
 // Adjust headings from BS defaults
-@media (min-width:1200px) {
+@media (min-width:600px) {
     h1 {
         font-size: 2rem;
     }
